--- a/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
@@ -8,11 +8,10 @@
 
     <ImageView
         android:id="@+id/profile_picture_image_view"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginBottom="160dp"
+        android:layout_width="218dp"
+        android:layout_height="218dp"
+        android:layout_marginTop="150dp"
         android:contentDescription="@string/login_profile_picture_description"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +21,7 @@
     <EditText
         android:id="@+id/nickname_text_view"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="54dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
@@ -33,7 +32,7 @@
         android:imeOptions="actionNext"
         android:textColor="@color/login_text_view_text_color"
         android:textIsSelectable="false"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_picture_image_view"
@@ -42,7 +41,7 @@
     <EditText
         android:id="@+id/about_text_view"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="54dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/login_textview_shape"
         android:gravity="center"
@@ -50,7 +49,7 @@
         android:inputType="text"
         android:imeOptions="actionDone"
         android:textColor="@color/login_text_view_text_color"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/nickname_text_view"
         app:layout_constraintStart_toStartOf="@+id/nickname_text_view"
         app:layout_constraintTop_toBottomOf="@+id/nickname_text_view"
@@ -59,7 +58,7 @@
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:background="@drawable/login_button_shape"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
