Chat Page Toolbar Problem Fix

--- a/ChatClient/app/src/main/res/layout/chat_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/chat_fragment_layout.xml
@@ -20,43 +20,13 @@
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-<!--                <com.google.android.material.appbar.CollapsingToolbarLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">-->
-
-            <com.example.chatclient.pages.chatpage.customviews.CollapsibleConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="100dp"
-                android:fitsSystemWindows="true"
-                app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed" />
-
-            <!--            <androidx.appcompat.widget.Toolbar-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="80dp"-->
-            <!--                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>-->
-
-
-            <!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
+                <com.example.chatclient.pages.chatpage.customviews.CollapsibleConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="90dp"
+                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"/>
 
         </com.google.android.material.appbar.AppBarLayout>
-
-        <!--    <androidx.core.widget.NestedScrollView-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="match_parent"-->
-        <!--        android:fillViewport="true"-->
-        <!--        android:scrollbars="none"-->
-        <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
-        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--        app:layout_constraintEnd_toEndOf="parent"-->
-        <!--        app:layout_constraintHorizontal_bias="0.0"-->
-        <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintTop_toTopOf="parent">-->
-
-
-        <!--    </androidx.core.widget.NestedScrollView>-->
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatPageRecyclerView"
