--- a/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
@@ -32,7 +32,7 @@
         android:imeOptions="actionNext"
         android:textColor="@color/login_text_view_text_color"
         android:textIsSelectable="false"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_picture_image_view"
@@ -49,7 +49,7 @@
         android:inputType="text"
         android:imeOptions="actionDone"
         android:textColor="@color/login_text_view_text_color"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/nickname_text_view"
         app:layout_constraintStart_toStartOf="@+id/nickname_text_view"
         app:layout_constraintTop_toBottomOf="@+id/nickname_text_view"
@@ -64,6 +64,7 @@
         android:paddingEnd="30dp"
         android:text="@string/login_button_start"
         android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="@color/login_start_button_text_color"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
