--- a/ChatClient/app/src/main/res/layout/chat_page_toolbar.xml
+++ b/ChatClient/app/src/main/res/layout/chat_page_toolbar.xml
@@ -47,7 +47,7 @@
         android:layout_height="50dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginEnd="32dp"
-        android:src="@drawable/send"
+        android:src="@drawable/login_default_avatar"
         app:civ_border_color="#63a7f5"
         app:civ_border_width="1.5dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:layout_height="50dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginEnd="32dp"
-        android:src="@drawable/send"
+        android:src="@drawable/login_default_avatar"
         app:civ_border_color="#63a7f5"
         app:civ_border_width="1.5dp"
         android:visibility="gone"
