--- a/ChatClient/app/src/main/res/layout/chat_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/chat_fragment_layout.xml
@@ -18,6 +18,7 @@
             android:id="@+id/chatPageAppBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
                 <com.example.chatclient.pages.chatpage.customviews.CollapsibleConstraintLayout
@@ -25,6 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:minHeight="90dp"
+                    android:fitsSystemWindows="true"
                     app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"/>
 
         </com.google.android.material.appbar.AppBarLayout>
