--- a/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
@@ -6,12 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_picture_image_view"
         android:layout_width="218dp"
         android:layout_height="218dp"
         android:layout_marginTop="150dp"
         android:contentDescription="@string/login_profile_picture_description"
+        android:src="@drawable/login_default_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
