Chat Page Live Data Implementation and some other fixes

--- a/ChatClient/app/src/main/res/layout/chat_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/chat_fragment_layout.xml
@@ -35,6 +35,7 @@
             android:id="@+id/chatPageRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@+id/chatPageMessageInput"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintTop_toBottomOf="@+id/chatPageAppBarLayout" />
 
