--- a/ChatClient/app/src/main/res/layout/chat_page_toolbar.xml
+++ b/ChatClient/app/src/main/res/layout/chat_page_toolbar.xml
@@ -14,6 +14,7 @@
         android:layout_height="27dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="45dp"
+        android:contentDescription="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/path" />
@@ -23,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Sayed Eftiaz"
+        tools:text="Sayed Eftiaz"
         android:textColor="@color/white"
         android:textSize="29sp"
         android:textStyle="bold"
@@ -35,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Manager"
+        tools:text="Manager"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/char_page_toolbar_full_name_tw_expanded"
@@ -60,6 +61,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginBottom="35dp"
         android:visibility="gone"
+        android:contentDescription="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/path" />
@@ -69,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="Sayed Eftiaz"
+        tools:text="Sayed Eftiaz"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -82,9 +84,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:text="Manager"
+        tools:text="Manager"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="12sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/char_page_toolbar_full_name_tw_collapsed" />
