--- a/ChatClient/app/src/main/res/layout/friend_message_cell.xml
+++ b/ChatClient/app/src/main/res/layout/friend_message_cell.xml
@@ -26,13 +26,13 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:text="TextView"
             android:textColor="#ff4d5a80"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Message" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -40,10 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="12:01"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
         app:layout_constraintStart_toEndOf="@+id/constraintLayout"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
+        tools:text="12:01" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
