--- a/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
@@ -72,4 +72,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/about_text_view" />
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/login_fragment_layout_progress_bar"
+        style="@style/AVLoadingIndicatorView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="invisible"
+        app:indicatorColor="@color/progress_bar_color"
+        app:indicatorName="BallSpinFadeLoaderIndicator"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
