--- a/ChatClient/app/src/main/res/layout/history_toolbar_layout.xml
+++ b/ChatClient/app/src/main/res/layout/history_toolbar_layout.xml
@@ -19,12 +19,12 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="35dp"
-            android:layout_height="match_parent"
+            android:layout_width="19dp"
+            android:layout_height="19dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@android:drawable/ic_search_category_default"
+            android:background="@drawable/search"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
