--- a/ChatClient/app/src/main/res/layout/history_recycler_view_item_layout.xml
+++ b/ChatClient/app/src/main/res/layout/history_recycler_view_item_layout.xml
@@ -36,7 +36,8 @@
         android:id="@+id/history_recycler_view_item_main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/history_fragment_background_color"
+        tools:ignore="PrivateResource">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
