--- a/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/login_fragment_layout.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_picture_image_view"
@@ -60,6 +65,8 @@
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/login_button_shape"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
@@ -85,4 +92,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
