--- a/ChatClient/app/src/main/res/values/colors.xml
+++ b/ChatClient/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="history_search_background_color">#DEDEFD</color>
     <color name="history_search_text_color">#A0A0B2</color>
 
+    <color name="history_fragment_background_color">#FFFFFF</color>
+
 </resources>
