--- a/ChatClient/app/src/main/res/layout/history_fragment_layout.xml
+++ b/ChatClient/app/src/main/res/layout/history_fragment_layout.xml
@@ -1,59 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/history_fragment_background_color">
+    android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="192dp">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:minHeight="70dp"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:toolbarId="@+id/toolbar">
-
-            <com.example.chatclient.pages.historypage.customViews.HistoryToolbarLayout
-                android:id="@+id/history_toolbar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </com.example.chatclient.pages.historypage.customViews.HistoryToolbarLayout>
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
 
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        android:background="@color/history_fragment_background_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.example.chatclient.pages.historypage.recyclerView.HistoryRecyclerView
-            android:id="@+id/history_recycler_view"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/history_recycler_view_item_layout">
+            android:layout_height="192dp">
 
-        </com.example.chatclient.pages.historypage.recyclerView.HistoryRecyclerView>
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:minHeight="70dp"
+                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
+                app:toolbarId="@+id/toolbar">
+
+                <com.example.chatclient.pages.historypage.customViews.HistoryToolbarLayout
+                    android:id="@+id/history_toolbar_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                </com.example.chatclient.pages.historypage.customViews.HistoryToolbarLayout>
 
 
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-    </androidx.core.widget.NestedScrollView>
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+            <com.example.chatclient.pages.historypage.recyclerView.HistoryRecyclerView
+                android:id="@+id/history_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/history_recycler_view_item_layout">
+
+            </com.example.chatclient.pages.historypage.recyclerView.HistoryRecyclerView>
+
+
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <TextView
         android:id="@+id/history_recycler_view_empty_text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/history_recycler_view_empty_view_text"
         android:gravity="center"
-        android:textSize="24sp" />
+        android:text="@string/history_recycler_view_empty_view_text"
+        android:textSize="24sp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
